[gd_scene load_steps=22 format=3 uid="uid://hxeowa5g8ffu"]

[ext_resource type="Script" path="res://Scripts/missle.gd" id="1_fu2su"]
[ext_resource type="Texture2D" uid="uid://o3yshd3ihcmn" path="res://Assets/missle attacking-Sheet.png" id="2_ofxva"]
[ext_resource type="Script" path="res://Components/Component Scripts/attack_component.gd" id="3_rnao6"]
[ext_resource type="Texture2D" uid="uid://bg87v00c6763t" path="res://Assets/missle detecting-Sheet.png" id="3_v4fjt"]
[ext_resource type="Script" path="res://Components/hitbox_component.gd" id="4_tb140"]
[ext_resource type="Texture2D" uid="uid://c6janbn6g28d4" path="res://Assets/missle idle-Sheet.png" id="4_wnkfp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1ervb"]
atlas = ExtResource("2_ofxva")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yufve"]
atlas = ExtResource("2_ofxva")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wdjf"]
atlas = ExtResource("3_v4fjt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0st47"]
atlas = ExtResource("3_v4fjt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8bwi"]
atlas = ExtResource("3_v4fjt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ybsn"]
atlas = ExtResource("3_v4fjt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r420x"]
atlas = ExtResource("4_wnkfp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g653r"]
atlas = ExtResource("4_wnkfp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjxnr"]
atlas = ExtResource("4_wnkfp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6crc"]
atlas = ExtResource("4_wnkfp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e3na"]
atlas = ExtResource("4_wnkfp")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_penfa"]
atlas = ExtResource("4_wnkfp")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k0k7e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ervb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yufve")
}],
"loop": true,
"name": &"attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wdjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0st47")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8bwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ybsn")
}],
"loop": false,
"name": &"detecting",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r420x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g653r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjxnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6crc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e3na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_penfa")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8d63h"]
radius = 20.5061

[sub_resource type="CircleShape2D" id="CircleShape2D_u2lwr"]
radius = 142.501

[node name="Missle" type="Area2D"]
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 8
script = ExtResource("1_fu2su")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_k0k7e")
animation = &"detecting"
autoplay = "idle"
frame = 3
frame_progress = 1.0

[node name="AttackComponent" type="Node2D" parent="."]
script = ExtResource("3_rnao6")

[node name="HitBoxComponent" type="Area2D" parent="."]
position = Vector2(77, -2)
collision_layer = 0
collision_mask = 4
script = ExtResource("4_tb140")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
position = Vector2(-77, 0)
shape = SubResource("CircleShape2D_8d63h")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_u2lwr")

[connection signal="area_entered" from="HitBoxComponent" to="." method="_on_hit_box_component_area_entered"]
